--- a/LamLibAllOver.csproj
+++ b/LamLibAllOver.csproj
@@ -1,9 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Title>LibAllOver</Title>
+        <Description>A lib to make some things easier</Description>
+        <Copyright>Lambda/MarcelS</Copyright>
+        <PackageProjectUrl>https://github.com/chaosmac1/LamLibAllOver</PackageProjectUrl>
+        <PackageIcon>icon.png</PackageIcon>
+        <RepositoryUrl>https://github.com/chaosmac1/LamLibAllOver</RepositoryUrl>
+        <RepositoryType>Git</RepositoryType>
+        <PackageTags>Lam Lambda</PackageTags>
+        <PackageReleaseNotes>Add Merge/Ulong/CopyStream Functions
+            Update Response Types
+        </PackageReleaseNotes>
+        <PackageVersion>1.0.1</PackageVersion>
+        <PackageLicenseUrl>MIT</PackageLicenseUrl>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -16,6 +30,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Include="icon.png" Pack="true" PackagePath="\"/>
         <PackageReference Include="Portable.BouncyCastle" Version="1.9.0"/>
     </ItemGroup>
 
