--- a/LamLibAllOver.csproj
+++ b/LamLibAllOver.csproj
@@ -12,9 +12,8 @@
         <RepositoryUrl>https://github.com/chaosmac1/LamLibAllOver</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>Lam Lambda</PackageTags>
-        <PackageReleaseNotes>Add Option Struct
-        </PackageReleaseNotes>
-        <PackageVersion>2.3.0</PackageVersion>
+        <PackageReleaseNotes>Add More Function For Option Struct (Trim)</PackageReleaseNotes>
+        <PackageVersion>2.5.0</PackageVersion>
         <PackageLicenseUrl>MIT</PackageLicenseUrl>
         <LangVersion>11</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
