--- a/LamLibAllOver.csproj
+++ b/LamLibAllOver.csproj
@@ -12,8 +12,8 @@
         <RepositoryUrl>https://github.com/chaosmac1/LamLibAllOver</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>Lam Lambda</PackageTags>
-        <PackageReleaseNotes>Add More Function In ResultErr Like Map And</PackageReleaseNotes>
-        <PackageVersion>2.12.0</PackageVersion>
+        <PackageReleaseNotes>Add Iter Function For Result And Option</PackageReleaseNotes>
+        <PackageVersion>2.13.0</PackageVersion>
         <PackageLicenseUrl>MIT</PackageLicenseUrl>
         <LangVersion>11</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
