--- a/LamLibAllOver.csproj
+++ b/LamLibAllOver.csproj
@@ -12,8 +12,8 @@
         <RepositoryUrl>https://github.com/chaosmac1/LamLibAllOver</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>Lam Lambda</PackageTags>
-        <PackageReleaseNotes>Add new Result Types</PackageReleaseNotes>
-        <PackageVersion>2.14.0</PackageVersion>
+        <PackageReleaseNotes>Add implicit operator</PackageReleaseNotes>
+        <PackageVersion>2.15.0</PackageVersion>
         <PackageLicenseUrl>MIT</PackageLicenseUrl>
         <LangVersion>11</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
