--- a/LamLibAllOver.csproj
+++ b/LamLibAllOver.csproj
@@ -22,6 +22,11 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
+
+
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <Optimize>true</Optimize>
         <PlatformTarget>x64</PlatformTarget>
@@ -34,6 +39,7 @@
 
     <ItemGroup>
         <None Include="icon.png" Pack="true" PackagePath="\"/>
+        <None Include="README.md" Pack="true" PackagePath="\"/>
         <PackageReference Include="NLog" Version="5.3.3"/>
         <PackageReference Include="Portable.BouncyCastle" Version="1.9.0"/>
     </ItemGroup>
